--- a/app/src/main/res/layout/out_dialog.xml
+++ b/app/src/main/res/layout/out_dialog.xml
@@ -3,135 +3,84 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/wicket"
-            android:textColor="@color/black" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/caught"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:tag="caught"
-                android:text="@string/caught" />
-
-            <RadioButton
-                android:id="@+id/lbw"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:tag="lbw"
-                android:text="@string/lbw" />
-
-
-            <RadioButton
-                android:id="@+id/bowled"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:tag="bowled"
-                android:text="@string/bowled" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/runnout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:tag="runout"
-                android:text="@string/runout" />
-
-            <RadioButton
-                android:id="@+id/hitwicket"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:tag="hitout"
-                android:text="@string/hit_wicket" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/caught_by_lay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="1.3">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight=".3"
-                android:text="@string/caught_by" />
-
-            <Spinner
-                android:id="@+id/caught_by"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:text="@string/hit_wicket" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/run_out_lay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/runout_lay"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal"
+                android:padding="10dp"
+                android:text="@string/wicket"
+                android:textColor="@color/black" />
 
-                android:weightSum="1.3">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="0dp"
+                <RadioButton
+                    android:id="@+id/caught"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:layout_weight=".3"
-                    android:text="@string/runs_scored" />
+                    android:tag="caught"
+                    android:text="@string/caught" />
 
-                <Spinner
-                    android:id="@+id/runs_scored_spinner"
-                    android:layout_width="0dp"
+                <RadioButton
+                    android:id="@+id/lbw"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:entries="@array/run_scored_before_runout" />
+                    android:tag="lbw"
+                    android:text="@string/lbw" />
+
+
+                <RadioButton
+                    android:id="@+id/bowled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:tag="bowled"
+                    android:text="@string/bowled" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal"
+                android:orientation="horizontal">
 
+                <RadioButton
+                    android:id="@+id/runnout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:tag="runout"
+                    android:text="@string/runout" />
+
+                <RadioButton
+                    android:id="@+id/hitwicket"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:tag="hitout"
+                    android:text="@string/hit_wicket" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/caught_by_lay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
                 android:weightSum="1.3">
 
                 <TextView
@@ -139,10 +88,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight=".3"
-                    android:text="@string/run_out_by" />
+                    android:text="@string/caught_by" />
 
                 <Spinner
-                    android:id="@+id/run_out_by"
+                    android:id="@+id/caught_by"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -151,43 +100,106 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/run_out_lay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
+                android:orientation="vertical">
 
-                android:weightSum="1.3">
-
-                <TextView
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:id="@+id/runout_lay"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight=".3"
-                    android:text="@string/wicket_of" />
+                    android:gravity="center"
+                    android:orientation="horizontal"
 
-                <Spinner
-                    android:id="@+id/wicket_of"
-                    android:layout_width="0dp"
+                    android:weightSum="1.3">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight=".3"
+                        android:text="@string/runs_scored" />
+
+                    <Spinner
+                        android:id="@+id/runs_scored_spinner"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:entries="@array/run_scored_before_runout" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:text="@string/hit_wicket" />
+                    android:gravity="center"
+                    android:orientation="horizontal"
+
+                    android:weightSum="1.3">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight=".3"
+                        android:text="@string/run_out_by" />
+
+                    <Spinner
+                        android:id="@+id/run_out_by"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:text="@string/hit_wicket" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+
+                    android:weightSum="1.3">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight=".3"
+                        android:text="@string/wicket_of" />
+
+                    <Spinner
+                        android:id="@+id/wicket_of"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:text="@string/hit_wicket" />
+                </LinearLayout>
             </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="@string/add_player_to" />
+
+            <include
+                layout="@layout/create_new_player"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp" />
+
+
         </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="@string/add_player_to" />
-
-        <include layout="@layout/create_new_player" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_gravity="center_horizontal"
             android:text="@string/submit" />
-    </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
