--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,61 +4,143 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:focusable="true"
     android:clickable="true"
+    android:focusable="true"
     tools:context=".MainActivity">
-
-
-    <realmstudy.lib.customViews.LargerTextView
-        android:id="@+id/num_balls_txt"
+    <realmstudy.lib.customViews.NormalTextView
+        android:id="@+id/match_status_quote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="balls"
-         />
-
-    <realmstudy.lib.customViews.LargerTextView
-        android:id="@+id/total_runs_txt"
-        android:layout_width="wrap_content"
+        android:text="home" />
+    <RelativeLayout
+        android:id="@+id/score_lay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/num_balls_txt"
-        android:layout_centerHorizontal="true"
-        android:text="runs"
-         />
+        android:background="@color/white"
+        android:clickable="true"
+        android:layout_below="@+id/match_status_quote"
+        android:focusable="true"
+        tools:context=".MainActivity">
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/home_team_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="home" />
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/away_team_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/away_total"
+            android:text="away" />
+
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/home_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/home_team_name"
+            android:text="75" />
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/home_wicket_u"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toRightOf="@+id/home_total"
+            android:text=" - " />
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/wicket_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toRightOf="@+id/home_wicket_u"
+            tools:text="1" />
+
+        <realmstudy.lib.customViews.NormalTextView
+            android:id="@+id/over_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_toRightOf="@+id/wicket_home"
+            tools:text="1" />
+
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/away_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toLeftOf="@+id/away_wicket_u"
+            tools:text="440" />
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/away_wicket_u"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/wicket_away"
+            android:text="-" />
+
+        <realmstudy.lib.customViews.SemiLargeTextView
+            android:id="@+id/wicket_away"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/over_away"
+            tools:text="1" />
+
+        <realmstudy.lib.customViews.NormalTextView
+            android:id="@+id/over_away"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            tools:text="1" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/striker_lay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/total_runs_txt"
+        android:layout_below="@+id/score_lay"
         android:orientation="horizontal">
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/striker_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_centerHorizontal="true"
-            android:text="NN"
-             />
+            android:text="NN" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/striker_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginRight="5dp"
-            android:text="0"
-             />
+            android:text="0" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/striker_balls"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginRight="5dp"
-            android:text="0"
-             />
+            android:text="0" />
     </LinearLayout>
 
     <LinearLayout
@@ -68,34 +150,31 @@
         android:layout_below="@+id/striker_lay"
         android:orientation="horizontal">
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/non_striker_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginRight="5dp"
-            android:text="RR"
-             />
+            android:text="RR" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/non_striker_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_centerHorizontal="true"
             android:layout_marginRight="5dp"
-            android:text="0"
-             />
+            android:text="0" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/non_striker_balls"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_centerHorizontal="true"
 
-            android:text="0"
-             />
+            android:text="0" />
     </LinearLayout>
 
 
@@ -106,32 +185,29 @@
         android:layout_below="@+id/non_striker_lay"
         android:orientation="horizontal">
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/current_bowler_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Ashwin"
-             />
+            android:text="Ashwin" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/current_bowler_overs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="15dp"
-            android:text="0"
-             />
+            android:text="0" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/current_bowler_runs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginRight="5dp"
-            android:text="0"
-             />
+            android:text="0" />
     </LinearLayout>
 
 
@@ -142,35 +218,57 @@
         android:layout_below="@+id/current_bowler_lay"
         android:orientation="horizontal">
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/next_bowler_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_centerHorizontal="true"
-            android:text="Zaheer"
-             />
+            android:text="Zaheer" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/next_bowler_overs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="15dp"
-            android:text="0"
-             />
+            android:text="0" />
 
-        <realmstudy.lib.customViews.LargerTextView
+        <realmstudy.lib.customViews.NormalTextView
             android:id="@+id/next_bowler_runs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginRight="5dp"
-            android:text="0"
-             />
+            android:text="0" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/last_twelve_balls"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/next_bowler_lay"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp" />
+    <realmstudy.lib.customViews.NormalTextView
+        android:id="@+id/shot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="5dp"
+        android:layout_below="@+id/last_twelve_balls"
+        android:text="0" />
+    <fragment
+        android:id="@+id/ground_frag"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/shot"
+        android:gravity="center"
+        class="realmstudy.extras.CanvasStudy"
+        android:orientation="horizontal"
+        android:padding="10dp" />
 
     <LinearLayout
         android:id="@+id/run_lay_L"
@@ -310,22 +408,24 @@
 
     <LinearLayout
         android:id="@+id/submit_lay"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:weightSum="2"
-        android:layout_height="wrap_content">
+        android:weightSum="2">
+
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/out"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/out" />
+
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:layout_weight="1"
+            android:layout_weight="1"
             android:text="submit" />
 
     </LinearLayout>
