--- a/app/src/main/res/layout/create_new_player.xml
+++ b/app/src/main/res/layout/create_new_player.xml
@@ -1,12 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
+   android:id="@+id/create_new_player"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/back_ground_dark"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/new_player_dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background_title_dialog"
@@ -42,7 +43,7 @@
 
 
     <EditText
-        android:id="@+id/ph_no"
+        android:id="@+id/time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
