--- a/app/src/main/res/layout/player_list_item.xml
+++ b/app/src/main/res/layout/player_list_item.xml
@@ -31,7 +31,7 @@
         android:textSize="@dimen/header_text" />
 
     <TextView
-        android:id="@+id/ph_no"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/playername"
