--- a/app/src/main/res/layout/player_list_view.xml
+++ b/app/src/main/res/layout/player_list_view.xml
@@ -13,10 +13,10 @@
         android:orientation="vertical">
 
 
-        <android.support.v7.widget.RecyclerView
+        <realmstudy.lib.customViews.SlideDeleteRecyclcerView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"></realmstudy.lib.customViews.SlideDeleteRecyclcerView>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
